meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/connectivity/snapshots/memfaultd__metrics__connectivity__connectivity_monitor__tests__half_connected_half_disconnected.snap
---
source: memfaultd/src/metrics/connectivity/connectivity_monitor.rs
expression: sorted_metrics
---
{
  "connectivity_connected_time_ms": 30000.0,
  "connectivity_expected_time_ms": 60000.0
}
