meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/connectivity/snapshots/memfaultd__metrics__connectivity__connectivity_monitor__tests__while_connected.snap
---
source: memfaultd/src/metrics/connectivity/connectivity_monitor.rs
expression: sorted_metrics
---
{
  "connectivity_connected_time_ms": 30000.0,
  "connectivity_expected_time_ms": 30000.0
}
